# 2014iOT

./: CMakeLists.txt
buildtemp/Debug/Win32/: client-cert.pem  libboost_iostreams-vc100-gd-1_54.lib  libboost_system-vc100-gd-1_54.lib  libboost_zlib-vc100-gd-1_54.lib  ssleay32.lib
buildtemp/Debug/x64/: ca-signing-cert.pem  libboost_iostreams-vc100-mt-gd-1_47.lib  libboost_system-vc100-mt-gd-1_47.lib  libboost_thread-vc100-mt-gd-1_47.lib  libboost_zlib-vc100-mt-gd-1_47.lib  sqlite3.lib
buildtemp/release/Win32/: ca-chain.pem  client-key.pem  dHParam.pem  libboost_iostreams-vc100-mt-1_54.lib  libboost_zlib-vc100-mt-1_54.lib  libeay32.lib  libtransport.exp  libtransport.lib  sqlite3.lib  xmlrpc_server.exp  xmlrpc_server.lib
buildtemp/release/x64/: ca-signing-key.pem  cakey.pem  libboost_filesystem-vc100-mt-1_47.lib  libboost_filesystem-vc100-mt-1_54.lib  libboost_iostreams-vc100-mt-1_47.lib  libboost_iostreams-vc100-mt-1_54.lib  libboost_system-vc100-mt-1_47.lib  libboost_system-vc100-mt-1_54.lib  libboost_thread-vc100-mt-1_47.lib  libboost_thread-vc100-mt-1_54.lib  libboost_zlib-vc100-mt-1_47.lib  libboost_zlib-vc100-mt-1_54.lib  server-key.pem  sqlite3.lib
import/include/: Makefile.in
import/include/openssl/: ocsp.h  opensslconf.h
ipCam/: sx_mgmt_camera_hw.c  sx_mgmt_sys.h
libs/: CMakeLists.txt  libs.sln
libs/NotificationCenter/: CMakeLists.txt  NotificationCenter.cpp  NotificationCenter.hpp  NotificationCenter.vcxproj  NotificationCenter.vcxproj.filters  NotificationSingleton.cpp  NotificationSingleton.hpp  libNotificationCenter_config.h
libs/libcommon/: CMakeLists.txt  libcommon.vcxproj  libcommon.vcxproj.filters  libcommon_config.h  logger.hpp  logger_linux.cpp  logger_windows.cpp  properties.cpp  properties.hpp  properties_value_general_limitation.cpp  properties_value_general_limitation.hpp  properties_value_limitation_if.hpp  service_engine.cpp  service_engine.hpp  xmlrpc_datetime.cpp  xmlrpc_datetime.hpp
libs/librf24/: CMakeLists.txt
libs/librf24/examples/: Makefile  pingtest.cpp
libs/libtransport/: CMakeLists.txt  libtransport.vcxproj  libtransport.vcxproj.filters  libtransport_config.h  method.cpp  method.hpp  rpc_session.cpp  rpc_session.hpp  socket_define.h
modules/: CMakeLists.txt  modules.sln
modules/discovery/: CMakeLists.txt  discovery.cpp  discovery.h  discovery.vcxproj  discovery.vcxproj.filters  discovery_config.h
modules/http_server/: CMakeLists.txt  http_connection.cpp  http_connection.hpp  http_connection_info.hpp  http_msg.cpp  http_msg.hpp  http_msg_parser.cpp  http_msg_parser.hpp  http_request_dispatcher.cpp  http_request_dispatcher.hpp  http_request_handler_if.hpp  http_server.cpp  http_server.hpp  http_server.vcxproj  http_server.vcxproj.filters  libhttp_server_config.h  network_connection_if.hpp  not_implement_request_handler.cpp  not_implement_request_handler.hpp  notify_request_handler.cpp  notify_request_handler.hpp  server_if.hpp  ssl_context_info.hpp  uri.cpp  uri.hpp
modules/nrf_server/librf24-rpi/librf24/examples/: pingtest.cpp.bk  rpi-hub.cpp
modules/xmlrpc_server/: CMakeLists.txt  libxmlrpc_server_config.h  xmlrpc_common_def.hpp  xmlrpc_fault.hpp  xmlrpc_request_handler.cpp  xmlrpc_request_handler.hpp  xmlrpc_server.cpp  xmlrpc_server.hpp  xmlrpc_server.vcxproj  xmlrpc_server.vcxproj.filters  xmlrpc_utility.hpp
p2p/: readme.txt
sensors/Libraries/: raspberrypi _arduino_nRF24L01_arduino.htm  raspberrypi _arduino_nRF24L01_raspberrypi.htm
sensors/Libraries/raspberrypi _arduino_nRF24L01_raspberrypi/: style.css
sensors/rpi_hub_intrusion_bee_rf/: rpi_hub_intrusion_bee_rf.ino
sensors/rpi_hub_magetic_bee_rf/: rpi_hub_magetic_bee_rf.ino
sensors/rpi_hub_shake_bee_rf/: rpi_hub_shake_bee_rf.ino
sensors/test/KY01_DIGITALTemperature/: KY01_DIGITALTemperature.ino
sensors/test/KY02_SHOCK/: KY02_SHOCK.ino
sensors/test/KY03_HALL/: KY03_HALL.ino
sensors/test/KY04_KEYBUTTON/: KY04_KEYBUTTON.ino
sensors/test/KY05_RFSHIT/: KY05_RFSHIT.ino
sensors/test/KY06_BEE/: KY06_BEE.ino
sensors/test/KY08_LESER/: KY08_LESER.ino
sensors/test/KY10_LIGHTBREAK/: KY10_LIGHTBREAK.ino
sensors/test/KY13_Temperature/: KY13_Temperature.ino
sensors/test/KY15_HUMDITY/: KY15_HUMDITY.ino
sensors/test/KY15_WATERTEMPTURE/: KY15_WATERTEMPTURE.ino
sensors/test/KY16_THREELED/: KY16_THREELED.ino
sensors/test/KY17_Mercury/: KY17_Mercury.ino
sensors/test/KY18_PHOTOCELL/: KY18_PHOTOCELL.ino
sensors/test/KY20_ANGLE/: KY20_ANGLE.ino
sensors/test/KY21_Magnetic/: KY21_Magnetic.ino
sensors/test/KY22_IRremote/: KY22_IRremote.ino
sensors/test/KY23_DUALJOYSTICK/: KY23_DUALJOYSTICK.ino
sensors/test/KY25_MAGETIC/: KY25_MAGETIC.ino
sensors/test/KY26_FIRE/: KY26_FIRE.ino
sensors/test/KY27_MagicCPU/: KY27_MagicCPU.ino
sensors/test/KY28_DIGITALTEMPERATURE/: KY28_DIGITALTEMPERATURE.ino
sensors/test/KY29_DUALLED_NEG/: KY29_DUALLED_NEG.ino
sensors/test/KY31_ROCKLED/: KY31_ROCKLED.ino
smartnode/: CMakeLists.txt  GPIOtest.cpp  edge_sensor.cpp  edge_sensor.h  httpSvr_out_layer.cpp  httpSvr_out_layer.h  main.cpp  rf24.h  rpc_remote_controller.cpp  rpc_remote_controller.h  server.c  smartnode.cpp  smartnode.h  smartnode.sln  smartnode.vcxproj  smartnode.vcxproj.filters
smartswitch/: CMakeLists.txt  main.cpp  sensor_prototype.cpp  sensor_prototype.h  sensor_trans.cpp  sensor_trans.h  server  smartswitch.cpp  smartswitch.h  smartswitch.sln  smartswitch.vcxproj  smartswitch.vcxproj.filters  xml_rpc_server.cpp  xml_rpc_server.h
smartswitch/test_certificates/: cacert.pem  client-cert-chain.pem  server-cert-chain.pem  server-cert.pem
test/BindQt/: BindQt.sln  BindQt.vcxproj  main.cpp
test/QtInterNational/: Qt_InterNational.sln  Qt_InterNational.vcxproj  main.cpp  main.h
test/openp2p/: CMakeLists.txt
test/piStreamer/: CMakeLists.txt  readme.txt  sx_mgmt_camera_hw.c  sx_mgmt_camera_hw.h
test/test_linux/: Makefile  Makefile.bk  buf-mgr-test.cpp  player-test.cpp  ptree-method-settings-test.cpp  qt-player-test.cpp  session-test.cpp  streaming-decoder.cpp
www/: client.php  demo.php  index.php  setSensorProps.php  testSensorProps.php
(+168 files in other folders)
