CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(LIBS)

# We can use -DCMAKE_BUILD_TYPE=Debug ro -DCMAKE_BUILD_TYPE=RelWithDebInfo to define something
IF(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
	ADD_DEFINITIONS("-DDEBUG")
ENDIF()


SET(Boost_USE_MUTITHREAD ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS thread)

#FIND_PACKAGE(PkgConfig REQUIRED)
#PKG_CHECK_MODULES(SDL REQUIRED sdl)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../modules)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../buildtemp ${Boost_LIBRARY_DIRS})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../buildtemp)

ADD_SUBDIRECTORY(libtransport)
ADD_SUBDIRECTORY(libcommon)
ADD_SUBDIRECTORY(NotificationCenter)
ADD_SUBDIRECTORY(librf24)
