CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MODULES)

FIND_PACKAGE(Qt4 REQUIRED)

# We can use -DCMAKE_BUILD_TYPE=Debug ro -DCMAKE_BUILD_TYPE=RelWithDebInfo to define something
IF(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
	ADD_DEFINITIONS("-DDEBUG")
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../libs)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../buildtemp ${Boost_LIBRARY_DIRS})

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../buildtemp)

ADD_SUBDIRECTORY(http_server)
ADD_SUBDIRECTORY(xmlrpc_server)
ADD_SUBDIRECTORY(discovery)
